fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -129,9 +129,6 @@ article{
   float:left;
   width:45%;
   margin:2.5%;
-  /*border-style:solid;*/
-  /*border-width: .5em;*/
-  /*border-color:#26332D;*/
 }
 
 .caption {
@@ -158,23 +155,18 @@ article{
     transform: translateY(100%);
     transition: transform .35s ease-out;
 }
-
 .caption__overlay h1{
     color:#dddfd4;
     font-size: 1.5em;
 }
-
-
 .caption:hover .caption__overlay {
     transform: translateY(0%);
 }
  
-
 h1 {
     text-shadow: 3px 3px 18px #dddfd4;
     color:#26332D;
 }
-
 .clear {
     clear:both;
     display: inline-block;
@@ -183,7 +175,6 @@ h1 {
     width:45%;
     text-align:center;
 }
-
 #linkedin {
     width:45%;
     display:inline-block;
@@ -191,7 +182,6 @@ h1 {
     float: right;
     color:#333333;
 }
-
 #linkedin p{
     display:inline-block;
     padding: 0 0 1em 1em;
@@ -201,7 +191,6 @@ footer div {
     width:100%;
     height:50px;
 }
-
 a:link {
     color: #dddfd4;
 }
@@ -211,7 +200,6 @@ a:visited:not(.active) {
 #nav li:hover {
     color: #ffffe5;
 }
-
 #reviewblocks a:hover {
     color: #ffffe5;
 }
@@ -229,13 +217,13 @@ a:visited:not(.active) {
   overflow-y: scroll;
 }
 #overlay img {
- margin: 1em;
- max-width:80%;
-     box-shadow:0 0 4px 6px #333333;
+    margin: 1em;
+    max-width:80%;
+    box-shadow:0 0 4px 6px #333333;
     background: #333333;
 }
 #overlay p {
- color:white; 
+    color:white; 
 }
 #overlay ul{
     list-style:none;
@@ -268,17 +256,14 @@ a:visited:not(.active) {
     }
     article {
         width: 100%;
+        margin: .4em 0;
     }
-
-
-    
     #linkedin{
         display:block;
         width:100%;
         margin: 2em;
         
     }
-    
     #Titlediv {
          margin:1.2em 0 4em 0;
          text-align:center;
@@ -297,8 +282,6 @@ a:visited:not(.active) {
     }
 
 }
-
-
 
 @media only screen and (max-width: 501px) {
     #nav {
@@ -343,7 +326,7 @@ a:visited:not(.active) {
     #Biosection,#Photossection,#Reviewssection,#Contactsection{
         width:100%;
         box-sizing: border-box;
-        margin: 0 0 3em 0;
+        margin: 0 0 2em 0;
         padding:0;
         text-align:center;
     }
@@ -356,7 +339,6 @@ a:visited:not(.active) {
     html { 
       background: #dddfd4;
     }
-
 }
 
 @media only screen and (max-width: 845px) and (min-width: 680px) {
